--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-#root {
-    & main {
-      display: flex;
-      max-width: 1248px;
-      margin: 0 auto;
-    }
-  }
+
+
+.main {
+  display: flex;
+  max-width: 1248px;
+  margin: 0 auto;
+}
